# automated_travel_entity

./: .gitmodules  README.md  motor.launch
Automated_Travel_Entity/: CMakeLists.txt  package.xml
automated_travel_entity/: CMakeLists.txt  package.xml
automated_travel_entity_launch/: CMakeLists.txt  filter_testing.launch  motor_drivers.launch  motor_drivers.launch~  ms1.launch  ms1.launch~  ms3.launch  navigation.launch  package.xml
camera/: CMakeLists.txt  README.md  camera_only.launch  color_histogram.ipynb  extract.launch  hsvcalibration_params.yaml  package.xml  param.yaml  vision.launch
camera/data/images/: train_val_test_split.py
camera/data/models/ManyFri Nov 24 15:23:00 2017/: class_indices.yaml
camera/data/models/Mon Nov 13 22:56:06 2017/: model.spec  readme.md
camera/data/models/No color based classes/: class_indices.yaml
camera/data/objects/blue_cube/: frame0026.xcf  frame20028.xcf  frame400278.xcf  frame500063.xcf  frame600551.xcf  frame600554.xcf  frame600690.xcf  frames600046.xcf  image0092.xcf  image0100.xcf
camera/data/objects/green_qube/: frame0006.xcf  frame400378.xcf  frame600573.xcf  frames600066.xcf  frames600616.xcf  frames601102.xcf  image0685.xcf  image300632.xcf
camera/data/objects/yellow_cube/: frame400174.xcf  frame600002.xcf  frames1600013.xcf  frames601128.xcf  image0149.xcf  image100232.xcf  image100248.xcf  image300555.xcf
camera/data/objects/yellow_sphere/: frame0004.xcf  frame600382.xcf  frame600422.xcf  frames600810.xcf  group_7_resized006.xcf  group_7_resized009.xcf
camera/launch/: object_detection.launch
camera/msg/: PosAndImage.msg
camera/src/: colorSegment.py  hsv_value_tuner.py  image_stream_extractor.py  input_stream_extractor.py  obstacle_spotter.cpp  recognizer.py  recognizer_model.py  spotter.py  spotter.py~  test_brain.py
camera/srv/: recognizer.srv
emergency_stop/: CMakeLists.txt  package.xml
emergency_stop/src/: emergency_stop_node.cpp
filter/: CMakeLists.txt  filter_params.yaml  package.xml  wall_finder_params.yaml
filter/include/: localization_global_map.h  measurements.h
filter/launch/: filter_node.launch
filter/maps/: lab_maze_2017.txt
filter/src/: filter_node.cpp  localization_global_map.cpp  measurements.cpp  test_node.cpp  wall_finder_node.cpp
keyboard_input/: CMakeLists.txt  package.xml
keyboard_input/src/: key.cpp
mother/: CMakeLists.txt  package.xml
mother/src/: maze.py  mother.py  mother_settings.py  mother_settings.py~  mother_utils.py  test_brain.py
navigation/: CMakeLists.txt  package.xml
navigation/include/: global_path_planner.h  location.h  map_visualization.h  path.h
navigation/launch/: navigation_node.launch  navigation_node.launch~
navigation/src/: global_path_planner  global_path_planner.cpp  local_map_node.cpp  location.cpp  map_visualization.cpp  navigation_node.cpp  navigation_node.cpp~  path.cpp
obstacle_detection/: CMakeLists.txt  README.md  obstacle_detection_params.yaml  package.xml
obstacle_detection/launch/: obstacle_detection_node.launch
obstacle_detection/src/: obstacle_detection_node.cpp
odometry/: CMakeLists.txt  CMakeLists.txt~  README.md  odom_params.yaml  package.xml
odometry/launch/: odometry_node.launch  odometry_node.launch~
odometry/src/: Odometry_v1.cpp  odometry.cpp  odometry_node.cpp
project_msgs/: CMakeLists.txt  package.xml
project_msgs/msg/: depth.msg  stop.msg
project_msgs/srv/: direction.srv  direction.srv~  distance.srv  exploration.srv  global_path.srv
robot_motor_controller/: CMakeLists.txt  package.xml  param.yaml  param.yaml~
robot_motor_controller/src/: controller.cpp  controller.cpp~
uarm_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
uarm_controller/src/: arm_controller.py  uarm_control.cpp  uarm_control.cpp~
uarm_controller/srv/: armPickupService.srv
uarm_cv/: CMakeLists.txt  package.xml
uarm_cv/src/: arm_cv_integration.cpp
wall_finder/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
wall_finder/launch/: filter_node.launch  odometry.launch~  particle_filter.launch~
wall_finder/src/: wall_finder_node.cpp
world_map/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
world_map/launch/: world_map_node.launch  world_map_node.launch~
world_map/maps/: test.txt
world_map/src/: test.txt~  world_map_node.cpp
