<?xml version="1.0"?>
<package>
  <name>camera</name>
  <version>0.0.0</version>
  <description>The camera package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend
>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>

  </export>
</package>
