<?xml version="1.0"?>
<package>
  <name>camera</name>
  <version>0.0.0</version>
  <description>The camera package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ras_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
 

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-tensorflow-pip</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ras_msgs</run_depend>
  <run_depend>libpcl-all</run_depend>
  <export>

  </export>
</package>
