<?xml version="1.0"?>
<package>
  <name>keyboard_input</name>
  <version>0.0.0</version>
  <description>The keyboard_input package</description>


  <maintainer email="caoe@kth.se">enyu cao</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

