<package>
 <name>project_msgs</name>
  <version>0.1.0</version>
  <description>
    These messages are defined for use within the RAS project.
  </description>
  <license>BSD</license>

  <maintainer email="jevaks@kth.se">Jevgenija Aksjonova</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


</package>
