<?xml version="1.0"?>
<package>
  <name>world_map</name>
  <version>1.0.0</version>
  <description>The world_map package</description>

  <maintainer email="rieri@kth.se">Rickard Eriksson</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
